Refactor CanonicalizeTest: replace deprecated file reading method with Files.readString for improved readability